--- a/frontend/src/pages/Auth/SignUp/components/SignUpForm.scss
+++ b/frontend/src/pages/Auth/SignUp/components/SignUpForm.scss
@@ -1,40 +1,191 @@
 .ls-signup-form {
-  padding: 1rem;
+  width: 100%;
 
-  .ls-signup-form__input {
-    margin-bottom: 1rem;
+  &__header {
+    margin-bottom: 1.5rem;
+
+    h1 {
+      font-size: 1.25rem;
+      font-weight: 600;
+      color: #313e4c;
+      margin-bottom: 0.5rem;
+      margin-top: 0;
+    }
+    
+    p {
+      font-size: 0.875rem;
+      color: #5c6d80;
+      margin: 0;
+      font-family: 'Merriweather', serif;
+      letter-spacing: 0.28px;
+      line-height: 1.5;
+    }
   }
 
-  .ls-signup-form__button {
-    margin-top: 1rem;
+  &__divider {
+    height: 1px;
+    background-color: #ebeef8;
+    margin: 1.25rem 0 1rem 0;
+    width: 100%;
+  }
+
+  &__field {
+    margin-bottom: 2rem;
+  }
+
+  &__label {
+    display: block;
+    font-size: 0.8125rem;
+    color: #313e4c;
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+    letter-spacing: 0.26px;
+  }
+
+  &__input {
+    width: 100%;
+    border: 1px solid #838b94;
+    border-radius: 0.75rem;
+    --padding-start: 1rem;
+    --padding-end: 1rem;
+    --padding-top: 0.75rem;
+    --padding-bottom: 0.75rem;
+    --highlight-color: var(--ion-color-primary);
+    margin-bottom: 0.75rem;
+    font-size: 0.875rem;
+    height: 3rem;
+    
+    &::part(native) {
+      padding: 0;
+    }
+  }
+
+  &__checkbox {
+    margin: 0.5rem 0 1.25rem 0;
+    display: flex;
+    align-items: center;
+    
+    &::part(container) {
+      border-radius: 0.125rem;
+      border: 1px solid #838b94;
+      width: 1.25rem;
+      height: 1.25rem;
+      margin-right: 0.5rem;
+      background-color: #435ff0;
+    }
+
+    &::part(label) {
+      color: #5c6d80;
+      font-size: 0.8125rem;
+    }
   }
 
   &__password-guidelines {
-    margin-top: -0.5rem;
-    margin-bottom: 1rem;
-    font-size: 0.85rem;
+    margin-top: 0.25rem;
+    margin-bottom: 1.5rem;
+    font-size: 0.8125rem;
     
     &-header {
       margin-bottom: 0.25rem;
       font-weight: 500;
+      color: #313e4c;
     }
     
     &-item {
       display: flex;
       align-items: center;
       margin-bottom: 0.125rem;
+      color: #5c6d80;
+      line-height: 1.5;
       
       &-icon {
         margin-right: 0.375rem;
+        min-width: 1.5rem;
       }
       
       &-valid {
-        color: var(--ion-color-success);
+        color: #313e4c;
+        
+        .ls-signup-form__password-guidelines-item-icon {
+          color: #36a656;
+        }
       }
       
       &-invalid {
-        color: var(--ion-color-medium);
+        color: #5c6d80;
+        
+        .ls-signup-form__password-guidelines-item-icon {
+          color: #5c6d80;
+        }
       }
     }
+  }
+
+  &__button {
+    margin-top: 1.5rem;
+    --border-radius: 0.6875rem;
+    --padding-top: 1.125rem;
+    --padding-bottom: 1.125rem;
+    font-weight: 600;
+    --background: #435ff0;
+    --background-activated: #3a56d4;
+    --background-hover: #3a56d4;
+    font-size: 1.125rem;
+    height: 3.75rem;
+    letter-spacing: 0.36px;
+    box-shadow: 0 0.5rem 1rem rgba(67, 95, 240, 0.12);
+    text-transform: none;
+    
+    &:disabled {
+      --background: #d7dbec;
+      --color: #abbccd;
+    }
+  }
+  
+  &__signup-login {
+    margin-top: 1.75rem;
+    text-align: center;
+    font-size: 0.875rem;
+    color: #000000;
+    font-weight: 600;
+
+    a {
+      color: #435ff0;
+      text-decoration: none;
+      font-weight: 600;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  &__toast {
+    background-color: rgba(54, 166, 86, 0.08);
+    border: 1px solid #36a656;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    display: flex;
+    align-items: flex-start;
+    margin: 1rem 0;
+    
+    &-icon {
+      color: #36a656;
+      margin-right: 0.75rem;
+      min-width: 1.5rem;
+    }
+    
+    &-text {
+      color: #5c6d80;
+      font-size: 0.8125rem;
+      line-height: 1.5;
+    }
+  }
+
+  &__error {
+    color: var(--ion-color-danger);
+    font-size: 0.8125rem;
+    margin-top: 0.375rem;
+    margin-bottom: 1rem;
   }
 } 
