--- a/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
+++ b/frontend/src/pages/Home/components/ReportItem/ReportItem.scss
@@ -19,7 +19,7 @@
     margin-bottom: 4px;
     font-weight: 700;
 
-    // Add a small bullet before neurological category
+    // Add a small bullet before brain category
     &:before {
       content: "";
       display: inline-block;
@@ -72,7 +72,7 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
     border: 1px solid rgba(0, 0, 0, 0.03);
 
-    &--general, &--brain, &--neurological, &--heart {
+    &--general, &--brain, &--heart {
       background-color: white;
     }
 
